--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -49,3 +49,4 @@ en:
       invalid_metric_period: "The metric period is invalid"
       invalid_metric_type: "The metric type is invalid"
       profile_criteria_not_fulfilled: "You need at least 5 reputation to create a profile"
+      invalid_community_video_url: "We could not find a YouTube or Vimeo video matching this URL"
