--- a/config/locales/notifications/en.yml
+++ b/config/locales/notifications/en.yml
@@ -16,7 +16,7 @@ en:
     added_to_contributors_page:
       1: >
         You now appear on our Contributors page. Thank you for contributing to Exercism!
-    analysis_feedback_added:
+    automated_feedback_added:
       1: >
         New feedback has been added to iteration (#%{iteration_idx}) of your solution to <strong>%{exercise_title}</strong> in <strong>%{track_title}</strong>.
         We %{emphasis}recommend taking a look.
