--- a/config/locales/communication_preferences/en.yml
+++ b/config/locales/communication_preferences/en.yml
@@ -18,7 +18,7 @@ en:
     email_on_student_finished_discussion_notification: "Email me when a student finished a discussion I am mentoring"
     email_on_student_added_iteration_notification: "Email me when a student adds an iteration to a solution I am mentoring"
 
-    email_on_automated_feedback_added_notification: "Email me when new automated feedback is added to my solution"
+    email_on_automated_feedback_added_notification: "Email me when automated feedback is added to my solution"
 
     email_on_nudge_notification: "Email me prompts about how to get the most out of Exercism"
 
