Add error specific to no being able to unlock help for a solution

--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -18,6 +18,7 @@ en:
       solution_comments_not_allowed: "Comments may not be retrieved or posted on this solution"
       solution_comment_not_found: "This solution comment could not be found"
       solution_without_iterations: "This solution does not have any iterations"
+      solution_unlock_help_not_accessible: "You do not have permission to unlock help for this solution"
       solution_comment_not_accessible: "This comment is not accessible"
       submission_not_found: "This submission could not be found"
       submission_not_accessible: "You do not have permission to view this submission"
