--- a/config/locales/user_reputation_tokens/en.yml
+++ b/config/locales/user_reputation_tokens/en.yml
@@ -14,10 +14,10 @@ en:
         You contributed to <strong>%{concept_name}</strong>
     exercise_article_author:
       1: >
-        You authored the <strong>%{article_title}</strong> article of <strong>%{exercise_title}</strong>
+        You authored the <strong>%{article_title}</strong> article for <strong>%{exercise_title}</strong>
     exercise_article_contribution:
       1: >
-        You contributed to the <strong>%{article_title}</strong> article of <strong>%{exercise_title}</strong>
+        You contributed to the <strong>%{article_title}</strong> article for <strong>%{exercise_title}</strong>
     exercise_approach_author:
       1: >
         You authored the <strong>%{approach_title}</strong> approach of <strong>%{exercise_title}</strong>
