--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -3,6 +3,7 @@ en:
     errors:
       not_onboarded: "You have not yet onboarded on the website"
       not_supermentor: "You do not have supermentor permissions"
+      not_supermentor_for_track: "You do not have supermentor permissions for this track"
       not_maintainer: "You do not have maintainer permissions"
       duplicate_submission: "No files you submitted have changed since your last submission"
       duplicate_video: "The video has already been submitted by someone else"
