--- a/config/locales/site_updates/en.yml
+++ b/config/locales/site_updates/en.yml
@@ -7,3 +7,7 @@ en:
     new_concept:
       1: >
         <em>%{maker_handles}</em> published a new Concept: <a href="%{concept_url}">%{concept_name}</a>
+
+    arbitary:
+      1: >
+        <em>%{author_handle}</em> published a new update.
