Add arbitary site updates (#3511)
* Add arbitary site updates

* Add changes to expanded update UI

* Change to description_markdown field to site update

* Site updates: Break out css, create `new` page, break out form into partial

* Render descriptionHtml

* Fix some site updates

* Add back buttons

* Tweak partial and styling a bit

* Site update form

* Fix form

* Improve look of admin table a bit

* Fix stuff up

* Fix new exercise makers

* Fix spelling and add tests

* Publish arbitrary immediately

* Render site update description as HTML

* Start fixing site update

* Apply suggestions from code review

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Add system test for arbitrary site update

* Use nil for markdown fields if source is nil

* Cleanup

* Add system tests for site updates on dashboard

* Update test looking for author img src

* Various tweaks

* Make 'today' title-cased

* Fix tests

* Fix one more failing test

* Add titleize option for date util fn

---------

Co-authored-by: dem4ron <demaaron88@gmail.com>
Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>
Co-authored-by: Aron Demeter <66035744+dem4ron@users.noreply.github.com>

--- a/config/locales/site_updates/en.yml
+++ b/config/locales/site_updates/en.yml
@@ -7,3 +7,7 @@ en:
     new_concept:
       1: >
         <em>%{maker_handles}</em> published a new Concept: <a href="%{concept_url}">%{concept_name}</a>
+
+    arbitrary:
+      1: >
+        <em>%{author_handle}</em> published a new update.
