--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -12,7 +12,7 @@ en:
       invalid_mentor_student_relationship: "There is not a valid relationship between you and this student"
       iteration_not_found: "The iteration you specified does not exist"
       profile_not_found: "This profile could not be found"
-      resource_not_found: "This URL was not recognised"
+      resource_not_found: "This URL was not recognized"
       solution_not_found: "This solution could not be found"
       solution_not_accessible: "You do not have permission to view this solution"
       solution_not_unlocked: "You have not unlocked this exercise"
