Add notifications for joining

--- a/config/locales/notifications/en.yml
+++ b/config/locales/notifications/en.yml
@@ -51,6 +51,14 @@ en:
       1: >
         Welcome to Exercism Lifetime Insiders!
 
+    join_insiders:
+      1: >
+        Join Exercism Insiders!
+
+    join_lifetime_insiders:
+      1: >
+        Join Exercism Lifetime Insiders!
+
     expired_insiders:
       1: >
         Your Exercism Insiders membership has expired.
