Update text for allow comments by default

--- a/config/locales/user_preferences/en.yml
+++ b/config/locales/user_preferences/en.yml
@@ -1,4 +1,4 @@
 en:
   user_preferences:
     auto_update_exercises: "Automatically update my solutions to the latest version of exercises if they pass the latest version's tests"
-    allow_comments_by_default: "Allow comments for my published solutions by default"
+    allow_comments_by_default: "Allow people to comment on my published solutions by default"
