--- a/config/locales/notifications/en.yml
+++ b/config/locales/notifications/en.yml
@@ -45,13 +45,16 @@ en:
       1: >
         Your Exercism Insiders membership has expired.
 
-    expired_premium:
-      1: >
-        Your Exercism Premium membership has expired.
-
     upgraded_to_lifetime_insiders:
       1: >
         You've been upgraded to Exercism Lifetime Insiders!
+
+    #########################################
+    # Legacy but possibly still in the wild #
+    #########################################
+    expired_premium:
+      1: >
+        Your Exercism Premium membership has expired.
 
     ######################################
     # Not actually used below this point #
@@ -66,7 +69,4 @@ en:
       1: Unused
 
     joined_lifetime_insiders:
-      1: Unused
-
-    joined_premium:
       1: Unused
