Add API method to reveal trophy

--- a/config/locales/api/en.yml
+++ b/config/locales/api/en.yml
@@ -23,6 +23,8 @@ en:
       solution_comment_not_accessible: "This comment is not accessible"
       submission_not_found: "This submission could not be found"
       submission_not_accessible: "You do not have permission to view this submission"
+      trophy_not_found: "This trophy could not be found"
+      trophy_not_accessible: "You do not have permission to access this trophy"
       representation_not_found: "This representation could not be found"
       team_not_found: "The team could not be found"
       track_ambiguous: "Please specify a track ID"
