--- a/config/locales/notifications/en.yml
+++ b/config/locales/notifications/en.yml
@@ -49,6 +49,10 @@ en:
       1: >
         You've been upgraded to Exercism Lifetime Insiders!
 
+    acquired_trophy:
+      1: >
+        You've been awarded the %{trophy_name} trophy on the %{track_title} track
+
     #########################################
     # Legacy but possibly still in the wild #
     #########################################
@@ -60,9 +64,6 @@ en:
     # Not actually used below this point #
     ######################################
     acquired_badge:
-      1: Unused
-
-    acquired_trophy:
       1: Unused
 
     joined_exercism:
