Add onboarding notifications (#3479)
* Add scaffolding for onboarding notifications

* Add missing files

* Add to sidekiq

* Add stub tests

* Add onboarding communication preference

* Add tests for community onboarding

* Fundraising notification

* Gracefully handle errors

* Cleanup schema

* Update app/jobs/create_onboarding_notifications_job.rb

* Naming refactoring

* Add tests for notifications

* Update db/migrate/20230216210634_add_index_on_users_created_at.rb

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Update config/locales/communication_preferences/en.yml

Co-authored-by: Jeremy Walker <jez.walker@gmail.com>

* Tweaks

* Optimize repeated notification checks

* Use I18n.t in tests

* WIP copy

* WIP

* Fix tests

* Apply suggestions from code review

* Refine copy

* Improve copy further

* Fix preview

* Revert refactoring

* Renamed onboarding_fundraising to onboarding_insiders

* Further tweaks

* Add text based versions

* Apply suggestions from code review

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

* Apply suggestions from code review

* Remove bad test

* Fix test

* Fix test

---------

Co-authored-by: Erik Schierboom <erik_schierboom@hotmail.com>

--- a/config/locales/notifications/en.yml
+++ b/config/locales/notifications/en.yml
@@ -20,6 +20,17 @@ en:
       1: >
         New feedback has been added to iteration (#%{iteration_idx}) of your solution to <strong>%{exercise_title}</strong> in <strong>%{track_title}</strong>.
         We %{emphasis}recommend taking a look.
+
+    onboarding_community:
+      1: >
+        Community is at the heart of Exercism. Join our forum and Discord server, enjoy our YouTube and Twitch channels, and get mentored.
+        Learn more…
+
+    onboarding_insiders:
+      1: >
+        Exercism Insiders is our reward program for everyone that supports our mission to create equal opportunity in tech.
+        Learn more on the Insiders page.
+
     nudge_to_request_mentoring:
       1: >
         <strong>It's time to get mentored!</strong>
@@ -64,13 +75,16 @@ en:
     # Not actually used below this point #
     ######################################
     acquired_badge:
-      1: Unused
+      1:
 
     joined_exercism:
-      1: Unused
+      1:
 
     joined_insiders:
-      1: Unused
+      1:
 
     joined_lifetime_insiders:
-      1: Unused
+      1:
+
+    onboarding_product:
+      1:
