--- a/config/locales/communication_preferences/en.yml
+++ b/config/locales/communication_preferences/en.yml
@@ -23,6 +23,7 @@ en:
     email_on_nudge_notification: "Email me prompts about how to get the most out of Exercism"
     email_about_fundraising_campaigns: "Email me about fundraising campaigns"
     email_about_events: "Email me about events (e.g. Functional February) or interviews."
+    receive_onboarding_emails: "Email me with hints about how to make the most of Exercism"
     email_about_insiders: "Email me about my Exercism Insiders membership"
 
     email_on_general_update_notification: "Email me about other non-essential updates to my account"
